--- a/MakePDFClient.csproj
+++ b/MakePDFClient.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="Grpc.Net.Client" Version="2.57.0" />
     <PackageReference Include="Google.Protobuf" Version="3.25.1" />
     <PackageReference Include="Grpc.Tools" Version="2.60.0">
@@ -19,5 +20,14 @@
   <ItemGroup>
     <Protobuf Include="Protos\MakePDF.proto" GrpcServices="Client" />
   </ItemGroup>
-
+ <ItemGroup>
+        <None Update="*.csv;appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+    <ItemGroup>
+        <Content Update="appsettings.json;appsettings.*.json;*.csv">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 </Project>
